--- a/frontend/src/Components/LoginSignup/LoginSignup.css
+++ b/frontend/src/Components/LoginSignup/LoginSignup.css
@@ -1,94 +1,57 @@
-body{
-    margin: 0;
-    height: 100vh;
-    font-family: sans-serif;
-    background: linear-gradient(#2A00B7, #42006C);
-}
-.container{
-display: flex;
-flex-direction: column;
-margin: auto;
-margin-top: 200px;
-background: #fff;
-width: 600px;
-padding-bottom: 30px;
+/* LoginSignup.css */
 
-}
-
-.header{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 9px;
-  width: 100%;
-  margin-top: 30px;
-}
-.text{
-    color: #3c009d;
-    font-size: 48px;
-    font-weight: 700;
-
-}
-.underline{
-    width: 61px;
-    height: 6px;
-    background: #3c009d;
-    border-radius: 9px;
-}
-.inputs{
-    margin-top: 55px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-
-}
-.input{
-   display: flex;
-   align-items: center;
-    margin: auto;
-    width: 480px;
-    height: 80px;
-}
-.input img{
-    margin: 0px 30px;
-}
-.input input {
-    height: 50px;
-    width: 400px;
-    background: transparent;
-    outline: none;
+.login-signup-container {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+  
+  h2 {
+    margin-bottom: 20px;
+  }
+  
+  form div {
+    margin-bottom: 15px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
     border: none;
-    color: #797979;
-    font-size: 19px;
-}
-
-.forgot-password{
-    padding-left: 62px;
-    margin-top: 27px;
-    color: #797979;
-    font-size: 18px;
-}
-.forgot-password span{
-    color: #4c00b4;
+    border-radius: 5px;
     cursor: pointer;
-}
-.submit-container{
-    display: flex;
-    gap: 30px;
-    margin:60px auto;
-}
-
-.submit{
-    display: flex;
-    justify-content: centre;
-    align-items: center;
-    width: 220px;
-    height: 59px;
-    color: #fff;
-    background: #4c00b4;
-    border-radius: 50px;
-    font-size: 19px;
-    font-weight: 700;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  p {
+    margin-top: 15px;
+  }
+  
+  p button {
+    background: none;
+    color: #007bff;
+    border: none;
     cursor: pointer;
-    padding-left: 50px;
-}
+  }
+  
